# ESP32-8x8-Crawler-Controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32
main/: CMakeLists.txt  Kconfig.projbuild  calibration.c  calibration.h  config.h  engine_sound.c  engine_sound.h  idf_component.yml  led_rgb.c  led_rgb.h  main.c  menu.c  menu.h  metrics.c  metrics.h  mode_switch.c  mode_switch.h  nvs_storage.c  nvs_storage.h  ota_update.c  ota_update.h  perf_metrics.c  perf_metrics.h  pwm_output.c  pwm_output.h  rc_input.c  rc_input.h  sound.c  sound.h  tuning.c  tuning.h  udp_log.c  udp_log.h  version.h  web_server.c  web_server.h
main/sounds/: mode_switch_sound.h  sound_profiles.c  sound_profiles.h  ural_idle.h
main/sounds/cat3408/: cat_idle.h  cat_knock.h  cat_rev.h  cat_start.h
main/sounds/chevy468/: 468ChevyBigBlockIdle.h  468ChevyBigBlockKnock.h  468ChevyBigBlockRev.h  468ChevyBigBlockStart.h
main/sounds/detroit8v92/: detroit_idle.h  detroit_jake_brake.h  detroit_knock.h  detroit_rev.h  detroit_start.h
main/sounds/effects/: air_brake.h  air_brake_squeak.h  gear_shift.h  horn_2tone.h  horn_dixie.h  horn_outlaw.h  horn_peterbilt.h  la_cucaracha.h  mantge_horn.h  reverse_beep.h  truck_horn.h  turbo_whistle.h  wastegate.h
main/sounds/is3tank/: IS3TankIdle.h  IS3TankKnock.h  IS3TankRev.h  IS3TankStart.h
main/sounds/jeep392/: JeepWranglerRubicon392V8Idle.h  JeepWranglerRubicon392V8Knock.h  JeepWranglerRubicon392V8Rev.h  JeepWranglerRubicon392V8Start.h
main/sounds/laferrari/: LaFerrariIdle.h  LaFerrariKnock.h  LaFerrariRev.h  LaFerrariStart.h
main/sounds/mankat/: ManKatIdle.h  ManKatJakebrake.h  ManKatKnock.h  ManKatRev.h  ManKatStart.h
main/sounds/mantgx/: MANTGXidle.h  MANTGXjakebrake2.h  MANTGXknock2.h  MANTGXrev.h  MANTGXshifting.h  MANTGXstart.h  MANTGXwastegate2.h  mantgx_idle.h  mantgx_jake.h  (+5 more)
(+56 files in other folders)
